--- a/OneDrive/Escritorio/CronoDateTimer3.0/index.html
+++ b/OneDrive/Escritorio/CronoDateTimer3.0/index.html
@@ -10,9 +10,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Estilos/styles.css">
-    <link rel="stylesheet" href="Estilos/alarma.css">
     <script src="JavaScript/header.js" defer></script>
-    <script src="JavaScript/date.js" defer></script>
+    <script src="JavaScript/setting.js" defer></script>
+    <script src="JavaScript/SPA.js"></script>
+
+
+    
+
+
     
 </head>
 <style>
@@ -170,9 +175,6 @@ footer{
             <p class="lead" style="font-size: 16px;">Política de privacidad | Términos de uso</p>
         </div>
     </footer>
-
-    <script src="JavaScript/SPA.js" ></script>
-    <script src="JavaScript/setting.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
 </body>
